# micr

lab3/stm32_pm2025/: CMakeLists.txt  toolchain-arm-gcc.cmake
lab3/stm32_pm2025/src/: main.c
laba№4/stm32_pm2025/: CMakeLists.txt
laba№4/stm32_pm2025/include/: spi.h  ssd1306.h
laba№4/stm32_pm2025/src/: main.c  spi.c  ssd1306.c
